--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^7.8.2",
     "styled-components": "^5.3.10"
   },
