Setting up cookies

--- a/client/.env
+++ b/client/.env
@@ -3,4 +3,6 @@ NODE_ENV=development
 # port
 PORT=5100
 # Connection string 
-MONGO_URL="mongodb+srv://csds23040_db_user:iuTQd0Agd@cluster0.sullff1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+# MONGO_URL="mongodb+srv://csds23040_db_user:iuTQd0Agd@cluster0.sullff1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET=secret
+JWT_EXPIRES_IN=1d
